<resources>
    <string name="app_name">Project2</string>
    <string name="username">username</string>
    <string name="hello">Hello,</string>
    <string name="go_to_shopping_list">Go to Shopping List</string>
    <string name="random_recipe_generator">Random Recipe Generator</string>
    <string name="admin_access">Admin Access</string>
    <string name="main_title">Welcome to Recipe Generator!</string>
    <string name="loginPrompt">Login</string>
    <string name="newUserPrompt">Create Account</string>
    <string name="signupUserHint">Enter a username</string>
    <string name="signupPasswordHint">Enter a password</string>
</resources>