<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/HelloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:text="@string/hello"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HelloUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelloText" />

    <Button
        android:id="@+id/buttonSavedRecipes"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:text="Saved Recipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelloUsername" />

    <Button
        android:id="@+id/buttonRandomRecipe"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/random_recipe_generator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSavedRecipes" />

    <Button
        android:id="@+id/buttonAdminAccess"
        android:layout_width="155dp"
        android:layout_height="85dp"
        android:layout_marginTop="32dp"
        android:text="@string/admin_access"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRandomRecipe" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        android:layout_marginBottom="55dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/HelloUsername"
        app:layout_constraintStart_toEndOf="@+id/HelloUsername" />
</androidx.constraintlayout.widget.ConstraintLayout>